[gd_scene load_steps=10 format=3 uid="uid://mjljiiitnmha"]

[ext_resource type="PackedScene" uid="uid://cyov2j2kueuxs" path="res://Scenes/UI/main_ui.tscn" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://dm13jmlsi1b3n" path="res://Scenes/game_manager.tscn" id="1_jjvhh"]
[ext_resource type="Script" uid="uid://b2xh1t3srxjmk" path="res://Scripts/main.gd" id="1_ynf5e"]
[ext_resource type="PackedScene" uid="uid://t4p5shl51pek" path="res://Scenes/grid_manager.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://b1i2xbyh3v123" path="res://Scenes/background.tscn" id="3_abcde"]
[ext_resource type="PackedScene" uid="uid://btr64ok6s14sx" path="res://Scenes/tile.tscn" id="3_kry3j"]
[ext_resource type="Script" uid="uid://btnpx33hjewxb" path="res://Scripts/placement_controller.gd" id="4_21xkr"]
[ext_resource type="Script" uid="uid://2thtbv4ik0oj" path="res://Scripts/blight_manager.gd" id="6_21xkr"]
[ext_resource type="PackedScene" uid="uid://dfw6ty31veih5" path="res://Scenes/UI/game_over_ui.tscn" id="9_hptm8"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("game_manager", "game_over_ui")]
script = ExtResource("1_ynf5e")
game_manager = NodePath("GameManager")
game_over_ui = NodePath("GameOverUI")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" parent="BackgroundLayer" instance=ExtResource("3_abcde")]

[node name="GameManager" parent="." node_paths=PackedStringArray("_blight_manager", "grid_manager") instance=ExtResource("1_jjvhh")]
_blight_manager = NodePath("../BlightManager")
grid_manager = NodePath("../GridContainer/GridManager")

[node name="GridContainer" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="GridManager" parent="GridContainer" instance=ExtResource("2_kry3j")]
tile_scene = ExtResource("3_kry3j")

[node name="MainUI" parent="." instance=ExtResource("1_jjgbg")]

[node name="PlacementController" type="Node" parent="."]
script = ExtResource("4_21xkr")

[node name="BlightManager" type="Node" parent="." node_paths=PackedStringArray("grid_manager")]
script = ExtResource("6_21xkr")
grid_manager = NodePath("../GridContainer/GridManager")

[node name="SpawnScalerTimer" type="Timer" parent="BlightManager"]

[node name="SpreadScalerTimer" type="Timer" parent="BlightManager"]

[node name="ActionTimer" type="Timer" parent="BlightManager"]

[node name="GameOverUI" parent="." instance=ExtResource("9_hptm8")]
offset_left = 627.0
offset_top = 333.0
offset_right = 627.0
offset_bottom = 333.0
